# Project-Fighter-Raids

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Raidfolder/: inventory.json
abilities/: __init__.py  base_ability.py  status_effect.py
characters/: __init__.py  atlantean_christie.py  atlantean_kagome.py  atlantean_kotal_kahn.py  atlantean_shinnok.py  atlantean_zasalamel.py  base_character.py  dragon_boss.py  ice_warrior.py  kotal_kahn.py  shadowfin_boss.py  subzero.py  warrior.py
config/: credentials.enc  firebase_config.py  key.key  login_config.py
effects/: __init__.py  visual_effects.py
engine/: __init__.py  action_queue.py  game_engine.py  stage_manager.py
gui/: login_window.py
items/: __init__.py  base_item.py  buffs.py  consumables.py  crafting_materials.py  legendary_items.py  loot_table.py  raid_inventory.py
modifiers/: modifier_base.py  modifier_manager.py  talent_modifiers.py
services/: database_service.py
stages/: __init__.py  base_stage.py  stage_1.py  stage_2.py  stage_3.py  stage_4.py  stage_5.py  stage_6.py
ui/: __init__.py  active_modifiers_display.py  battle_log.py  button.py  debug_console.py  inventory.py  loot_window.py  modifier_selection.py  stage_selector.py
utils/: generate_ability_icons.py  project-fighters-by-fishb0nes-default-rtdb-export (7).json
